Fix issue of overflow content

--- a/sass/_site_layout.scss
+++ b/sass/_site_layout.scss
@@ -16,3 +16,7 @@ body{
   transform: translateX(10px);
   opacity: 0;
 }
+#page{
+	width: 100%;
+	overflow: hidden;
+}
